<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rohanx96.nd_myappportfolio.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/AppTheme.DarkToolbar">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/my_apps_text"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:background="@color/colorAccent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/spotify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/spotify_app"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/scores_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/scores_app"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/library_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/library_app"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/build_bigger_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/build_bigger_app"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/reader_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/reader_app"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/capstone_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/capstone_app"
                android:textColor="@color/white"
                android:background="@drawable/capstone_button_background"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
